--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,22 @@
 {
-    "name": "web_application",
-    "short_name": "web_app",
-    "description": "A brief description of your web application.",
+    "name": "Circuito F1 Madrid",
+    "short_name": "F1 Madrid",
+    "description": "Página oficial del Circuito F1 de Madrid.",
     "start_url": "/index.html",
-    "scope": "/",
-    "icons": [
-        {
-            "src": "/assets/icons/favicon/web-app-manifest-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "/assets/icons/favicon/web-app-manifest-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        }
-    ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
     "display": "standalone",
-    "dir": "ltr",
-    "lang": "es"
-}
+    "background_color": "#FFFFFF",
+    "theme_color": "#D8232A",
+    "icons": [
+      {
+        "src": "./assets/icons/favicons/web-app-manifest-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "./assets/icons/favicons/web-app-manifest-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
+    ]
+  }
+  
